--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -17,7 +17,8 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>2020.0.3</spring-cloud.version>
+<!-- <spring-cloud.version>2020.0.3</spring-cloud.version> -->
+		<spring-cloud.version>2.3.4.RELEASE</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -40,7 +41,15 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>3.0.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+			<version>2.2.9.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -51,15 +60,16 @@
 			</plugin>
 		</plugins>
 	</build>
-	<dependencyManagement>
+	<!-- <dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
+				<version>2.2.9.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
-	</dependencyManagement>
+	</dependencyManagement> -->
 </project>
