--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=rh-payroll
-server.port=8082
+server.port=8080
 
-hr-worker.host=http://localhost:8081/
+#hr-worker.host=http://localhost:8081/
+
+#hr-worker.ribbon.listOfServers=localhost:8081,localhost:8082
+hr-worker.ribbon.listOfServers=localhost:8081
