created project eureca server

--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.port=8080
 #hr-worker.host=http://localhost:8081/
 
 #hr-worker.ribbon.listOfServers=localhost:8081,localhost:8082
-hr-worker.ribbon.listOfServers=localhost:8081
+hr-worker.ribbon.listOfServers=localhost:8081,localhost:8082
