--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=hr-worker
 server.port=8081
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
 #data base configuration
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testbd
