--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=8080
 
 #hr-worker.ribbon.listOfServers=localhost:8081,localhost:8082
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
